sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:4: error: not found: value getNombreValeur
  var lgr:Int = getNombreValeur()
                ^